--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     </head> 
     <body> 
         <h1>Deliverables</h1> 
+        <ul>
+        </ul>
+
+        <h2>Group Members</h2>
+        <ul>
+            <li>Jimmy Ostler</li>
+            <li>Chris Olivia</li>
+        </ul>
+
+        <h2>Project</h2>
     </body> 
 </html>
