--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body> 
         <h1>Deliverables</h1> 
         <ul>
+            <li><a href="Project Proposal.pdf">Proposal</a></li>
         </ul>
 
         <h2>Group Members</h2>
