--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>Deliverables</h1> 
         <ul>
             <li><a href="Project Proposal.pdf">Proposal</a></li>
+            <li><a href="./d2.html">Deliverable #2</a></li>
         </ul>
 
         <h2>Group Members</h2>
