--- a/d2.html
+++ b/d2.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>
         Deliverable #2
+        </title>
     </head>
     <body>
+        Deliverable #2
+        <br>
+        <a href="./index.html">Main Page</a>
         <h3>Design Concepts</h3>
         <p>Due to the slightly different nature of our project where we are assessing what
         the possible problem may be, our design concepts look a little bit different. 
         For our concepts we assess different possible ways we can structure our surveys and usability tests.</p>
-        <br>
         <ul>
             <li>Possibility 1: We could use no surveys and only observe the participants as they attempt
             to navigate the MBA Graduate website. In this scenario we would have very little information about the
