made way more legible

--- a/d2.html
+++ b/d2.html
@@ -4,6 +4,7 @@
         <title>
         Deliverable #2
         </title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         Deliverable #2
