--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
     <head> 
         <title>HCI Group 6 Journal</title> 
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head> 
     <body> 
         <h1>Deliverables</h1> 
