--- a/d2.html
+++ b/d2.html
@@ -15,42 +15,42 @@
         the possible problem may be, our design concepts look a little bit different. 
         For our concepts we assess different possible ways we can structure our surveys and usability tests.</p>
         <ul>
-            <li>Possibility 1: We could use no surveys and only observe the participants as they attempt
+            <li><strong>Possibility 1:</strong> We could use no surveys and only observe the participants as they attempt
             to navigate the MBA Graduate website. In this scenario we would have very little information about the
             participants, but we could trust our results slightly better as we minimize how much we lead
             our participant in how they perform the tests.</li>
-            <li>Possibility 2: We could have them perform the tests themsevles while we have an extensive evaulation
+            <li><strong>Possibility 2:</strong> We could have them perform the tests themsevles while we have an extensive evaulation
             about how they felt and their experience afterwards. Not being able to see them would give us less data,
             but it would be less time intensive and with the pre and post surveys we could still gain enough to 
             make an educated decision.</li>
-            <li>Possibility 3: We could evaluate the sites ourselves using our knowledge from this class. This would allow
+            <li><strong>Possibility 3:</strong> We could evaluate the sites ourselves using our knowledge from this class. This would allow
             us to directly apply what we learn in class, but we'd lose the advantage of having specific participants
             who we have background knowledge of to allow us to make a more educated conclusion.</li>
-            <li>Possibility 4: We could administer pre and post surveys, and directly administer the usability
+            <li><strong>Possibility 4:</strong> We could administer pre and post surveys, and directly administer the usability
             tests. This give us the advantage of having a large data set for each participant, which could allow
             us to minimize amount of time looking for participants instead of analyzing the data to arrive at a 
             conclusion.</li>
-            <li>Possibility 5: We could setup posters asking people to anonymously attempt a specific task and write
+            <li><strong>Possibility 5:</strong> We could setup posters asking people to anonymously attempt a specific task and write
             down their thoughts an experience in a google form at the end. This would ideally result in lots of data
             from a diverse group of people, but isn't guaranteed to result in high quality data or a signifigant
             amount. While this idea has its merits, it's not ideal for a more in depth analysis.</li>
-            <li>Possibility 6: We could design a singular google form that a participant goes through and completes
+            <li><strong>Possibility 6:</strong> We could design a singular google form that a participant goes through and completes
             specific task and makes remarks about each one in the form. This kind of administration would allow less
             observation based data but a more structured data guaranteed to be relevant to the specific task, as participants
             would have filled out each section immediately after they perform the specific task.</li>
-            <li>Possibility 7: We could take a slightly different approach here. In this we would ask a participant to spend a day as if they were a prospective grad student and 
+            <li><strong>Possibility 7:</strong> We could take a slightly different approach here. In this we would ask a participant to spend a day as if they were a prospective grad student and 
             attempt to gather as much information as they could. Because we're attempting to measure which information forms
             people can access, objective data can include which forms were easier or harder to arrive at, which
             form they felt were sufficient for what they were looking for, and how satisfied they were overall.</li>
-            <li>Possibility 8: In this concept we would create a sitemap of the MBA program website and analyze which forms have more links that
+            <li><strong>Possibility 8:</strong> In this concept we would create a sitemap of the MBA program website and analyze which forms have more links that
             lead to them, which forms are accessible through easier means, and how often each page gets visited. The main downside of this
             is the lack of direct participant input, and the amount of information to gather would be far less feasable
             than another idea.</li>
-            <li>Possibility 9: This concept revolves around gathering specific participants that would exactly reflect the typical prospective grad student. In this we 
+            <li><strong>Possibility 9:</strong> This concept revolves around gathering specific participants that would exactly reflect the typical prospective grad student. In this we 
             would find a number of prospective or accepted grad students, and simply survey them about their experience in attempting to apply.
             The advantage of this is getting participants who are guaranteed to be invested in the results, and who's experiences are more 
             real than simulated, in the case of simply asking someone to act as if they were a prospective student.</li>
-            <li>Possibility 10: In this concept we would find a group of participants, and we would measure their frustration levels
+            <li><strong>Possibility 10:</strong> In this concept we would find a group of participants, and we would measure their frustration levels
             with attempting to access a specific page. In this test, we would find out about specifc pages and how accessible
             they are, but at the expense of a more holistic idea of the system as a whole. This would give us valuable information,
             and it is information we would likely need to come to a conclusion, but it may be better to reduce the scope of the tests
@@ -59,8 +59,8 @@
 
         <h3>Prototypes</h3>
         <ul>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfOLpu32NnfiLdotH2rjQ-4nA78wqraj6mqJeBKoyEw6UhYsQ/viewform?usp=sharing">Post-Survey Draft</a></li>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfbB0xPO6TvaULXgQjiN2SGVODCyAHLcQ9kBsxoD3_RWrOgyg/viewform?usp=sharing">Pre-Survey Draft</a></li>
+            <li><a href="https:</strong>//docs.google.com/forms/d/e/1FAIpQLSfOLpu32NnfiLdotH2rjQ-4nA78wqraj6mqJeBKoyEw6UhYsQ/viewform?usp=sharing">Post-Survey Draft</a></li>
+            <li><a href="https:</strong>//docs.google.com/forms/d/e/1FAIpQLSfbB0xPO6TvaULXgQjiN2SGVODCyAHLcQ9kBsxoD3_RWrOgyg/viewform?usp=sharing">Pre-Survey Draft</a></li>
         </ul>
 
         <h3>Usability Goals and Benchmark Tests</h3>
@@ -80,5 +80,15 @@
         current best ideas and practices, and it is subject to change. Ideally, and criticism allows us to improve
         directly on either fundamental flaws in our approach or details that may be important. However, as of now,
         we are satisfied with this as our current draft.</p>
+        <p>Benchmark tests for our project would be measurable, objective things we can measure during our assessment. These things could be very concrete, such as time taken to reach a certain
+        form, or less concrete, such as the participant rating on a scale their frustration at certain aspects of the site. The important part of these is that they're 
+        directly comparable to each other and have an objective meaning that we can draw concrete conclusions from.</p>
+        <p>For now, we will be looking at these:</p>
+        <ul>
+            <li>Exact time it takes to navigate to a certain form</li>
+            <li>Satisfaction as rated on an objective scale</li>
+            <li>Frustration (at specific points) as rated on an objective scale</li>
+            <li>How many pages users navigate through to achieve a specific goal</li>
+        </ul>
     </body>
 </html>
