--- a/d2.html
+++ b/d2.html
@@ -12,7 +12,9 @@
         <a href="./index.html">Main Page</a>
         <h3>Design Concepts</h3>
         <p>Due to the slightly different nature of our project where we are assessing what
-        the possible problem may be, our design concepts look a little bit different. 
+        the possible problem may be, our design concepts look a little bit different. We felt that a sketch/diagram
+        doesn't represent our type of problem as well, so we leaned into text description for a most of ours, 
+        and created 3 diagrams representing our most diverse Design Concepts.
         For our concepts we assess different possible ways we can structure our surveys and usability tests.</p>
         <ul>
             <li><strong>Possibility 1:</strong> We could use no surveys and only observe the participants as they attempt
