--- a/d1.html
+++ b/d1.html
@@ -7,7 +7,18 @@
     <body>
         Deliverable #1
         <br>
+        <a href="./index.html">Main Page</a>
         <h3>Observing Users</h3>
+            <p>User #1</p>
+            <ul>
+                <li>Current willamette DS 3+1 student</li>
+                <li>Interested in doing an MBA at Willamette University, but struggled to find a page with relevant information for his scenario.</li>
+                <li>Eventually found a page where he could talk to someone on campus instead of dealing with the difficult website.</li>
+            </ul>
+            <p>User #2</p>
+            <ul>
+                <li>Non-Willamette student </li>
+            </ul>
         <h3>Identifying The Problemn</h3>
         <h3>Developing Personas</h3>
         <h3>Illustrating a Use Case Scenario</h3>
