finished most of d1

--- a/d1.html
+++ b/d1.html
@@ -8,6 +8,8 @@
         Deliverable #1
         <br>
         <a href="./index.html">Main Page</a>
+        <h3>Background Information</h3>
+        <p>TODO FILL WITH STUFF FROM ORIGINAL WE MAY NEED</p>
         <h3>Observing Users</h3>
             <p>User #1</p>
             <ul>
@@ -17,15 +19,115 @@
             </ul>
             <p>User #2</p>
             <ul>
-                <li>Non-Willamette student </li>
+                <li>Non-Willamette student, but interested in the MBA For Professionals program.</li>
+                <li>The front page contained a link to descriptions that helped, but she struggled to find information
+                about the difference between Portland and Salem campuses, and didn't get sufficient information from
+                rquesting information, and feels turned off from the program and lack of information.</li>
+            </ul>
+            <p>User #3</p>
+            <ul>
+                <li>Older person, looking to switch from their previous career</li>
+                <li>All informational forms they found contained slightly different choices, but appeared the same</li>
+                <li>This made them feel uncomfortable picking just one, and worried they were missing something</li>
+                <li>They also felt confused by the differences between the Early Career and Career Change programs,
+                and wanted to make sure they were on the right path for them, but couldn't find a generic form 
+                to ask those questions.</li>
             </ul>
         <h3>Identifying The Problemn</h3>
+        <p>The Willamette MBA site might be really difficult to navigate for users who are not 
+        familiar with it, which could be a barrier for some students who are interested in finding 
+        out more about MBA programs Willamette offers. There are few important forms in the MBA website 
+        that users should be able to find easily. However, we are not certain that users can access or 
+        find those important forms easily by clicking through the webpage.</p>
+        <p>To illustrate this more, here are just a few important forms that every prospective MBA applicant might
+        want to see:</p>
+        <ul>
+           <li><a href="https://grad-apply.willamette.edu/register/?id=9986ef44-4302-4357-9a57-4b7069f27bff">https://grad-apply.willamette.edu/register/?id=9986ef44-4302-4357-9a57-4b7069f27bff</a></li>
+           <li><a href="https://grad-attps://grad-apply.willamette.edu/register/request-info">https://grad-attps://grad-apply.willamette.edu/register/request-info</a></li>
+           <li><a href="https://grad-attps://grad-apply.willamette.edu/register/mba-rfi">https://grad-attps://grad-apply.willamette.edu/register/mba-rfi</a></li>
+           <li><a href="https://grad-attps://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa">https://grad-attps://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa</a></li>
+           <li><a href="https://grad-attps://grad-apply.willamette.edu/register/mba-msds">https://grad-attps://grad-apply.willamette.edu/register/mba-msds</a></li>
+           <li><a href="https://grad-attps://grad-apply.willamette.edu/register/one-year-mba-info">https://grad-attps://grad-apply.willamette.edu/register/one-year-mba-info</a></li>
+        </ul>
+        <p>All of these are for slightly different scenarios, all in different places. What fits one prospect 
+        best may be much harder for them to find.</p>
         <h3>Developing Personas</h3>
+        <p>Consider User #1 and User #2. How should we effectively measure their experience in a way that would
+        allow us to improve it for them, and for other personas?</p>
+        <p>Persona #1 (has prior experience)</p>
+        <ul>
+            <li>Prior Experience: This user is currently already enrolled in a masters program at Willamette.
+            This means they may already have experience navigating the Willamette MBA page.</li>
+            <li>Experience Satisfaction: This user was not satisfied with their experience. The website was confusing
+            and they fell back on in-person sesources. What objective method
+            can we use to measure this in our assessment? What things about their backgroud should we consider during this?</li>
+            <li>In essence, Persona #1 represents a student with prior experience. This won't be an uncommon persona,
+            especially at willamette. Prepating adequately for anybody like this will be necessary.</li>
+        </ul>
+        <p>Persona #2 (no prior experience)</p>
+        <ul>
+            <li>Prior Experience: Separate from Persona #1, this user has no prior experience, either at Willamette or 
+            with the MBA website. It will be totally unfamiliar to them, and these people are likely especially at risk
+            of being lost, because online is the only resource they may have.</li>
+            <li>Experience Satisfaction: This user was able to find necessary information, but not easily. This may
+            not apply for all Personas, especially those who may have other, easier options lined up,
+            and these we are at particular risk for losing business from.</li>
+            <li>These people especially would benefit, because nobody wants to spend an entire day trying to find 
+            a link to a specific form they need.</li>
+        </ul>
         <h3>Illustrating a Use Case Scenario</h3>
+        <p>In this, we'll take Persona #1 and walk through our current proposed method for evaluating their experience
+        using our assessment.</p>
+        <p><strong>Step:</strong></p>
+        <ol>
+            <li>After finding this persona, we'll make sure they sign our consent form, then send them
+            the pre-survey to be filled out before we adminster the usability test. In this user's Case
+            we should now know they have prior experience at willamette and with the MBA site.</li>
+            <li>We then schedule and adminster the usability test. This will take about an hour
+            and will consist of us measuring objective data about their experience.</li>
+            <li>At the end, the post-survey should give us specific data about what the user was
+            thinking during specific parts of the assessment, and should finalize the process for Persona #1.</li>
+        </ol>
+        <p>This would be the process/scenario of our project with a specific persona in mind.</p>
         <h3>Finding Related Products</h3>
+        <p>There are not really alternatives to the MBA site, but there is a plethora of similar sites,
+        both for graduate and undergrad degrees at Willamette University.</p>
+        <h4>Appling for the College of Arts and Sciences</h4>
+        <p>The college of arts and sciences has a very different experience. The very first page about applying
+        lists all scenarios for a student who may be applying to the CAS, and provides a spearate list for each.
+        This list includes deadlines, the actual application, sending transcripts, reccomendations, and test scores.</p>
+        <p>Unlike the MBA program, however, links to importamt forms are not as common. This may be because the information is 
+        already all there, or because they're simple harder to find. Program specific information is also supplied, 
+        but in a separate section.</p>
         <h3>Comparing Products</h3>
+        <p>The CAS application information is very different from the MBA experience. Smply measuring how long it takes
+        to find information simply isn't a very good way of evaluating the CAS website. The information tends to be 
+        right there. The ideas of using pre and post surveys would still apply, but in a much different manner, because
+        very few applicants to the CAS will have prior Willamette experience beyond maybe visiting,
+        but MBA applicants may have spent an entire undergrad at Willamette, making the user cases vastly different.</p>
+        <p>Overall, our current solution of finding a process to evaluate a website can be generically applied
+        to many websites, but the specific information we've been given to look for is specific to the Willamette MBA
+        site. The process itself will be outlined in out High-Level Architecture.</p>
         <h3>Designing at a High-Level Architecture</h3>
+        <img src="pic_2.png" alt="High-Level Architecture diagram">
+        <p>In our diagram for our high High-Level we can highlight several key components:</p>
+        <ul>
+            <li>Pre-Survey: This would be administered before the assessment, and given to participants.</li>
+            <li>Researcher: This element records the notes and data from the tasks given to the participants.</li>
+            <li>Post-Survey: This is given to participants after the assessment, and is used to collect data.</li>
+            <li>Participants: This element is used as the backbone of gathering the data from tasks and surveys.</li>
+            <li>Data: This is used by the Researcher to analyze and to create a final design reccomendation.</li>
+        </ul>
         <h3>Justifying Feasibility</h3>
+        <img src="table.png" alt="table describing the timeline and estimated time for the project">
+        <p>Given what is already completed (Submit Proposal, Create Survey Draft, Explore Website) and the timeline 
+        for tasks that need to be completed, the feasbility is very realistic. The estimated times end up with a finishing time
+        much before the end of the semester, giving adequate buffer time for when things inevitably take longer than 
+        anticipated. </p>
+        <h3>Link to Original Proposal</h3>
+        <a href="Project Proposal.pdf">Proposal</a>
+        <p>I included this as a supplementary inclusion should anything be missing from this version that may have 
+        been covered in the original.</p>
     </body>
 </html>
 
