--- a/d2.html
+++ b/d2.html
@@ -31,11 +31,16 @@
             <li><strong>Possibility 4:</strong> We could administer pre and post surveys, and directly administer the usability
             tests. This give us the advantage of having a large data set for each participant, which could allow
             us to minimize amount of time looking for participants instead of analyzing the data to arrive at a 
-            conclusion.</li>
+            conclusion.<br>
+            <strong>Diagram:</strong><br>
+            <img src="pic_2.png" alt="diagram describing Possibility 4"></li>
+            
             <li><strong>Possibility 5:</strong> We could setup posters asking people to anonymously attempt a specific task and write
             down their thoughts an experience in a google form at the end. This would ideally result in lots of data
             from a diverse group of people, but isn't guaranteed to result in high quality data or a signifigant
-            amount. While this idea has its merits, it's not ideal for a more in depth analysis.</li>
+            amount. While this idea has its merits, it's not ideal for a more in depth analysis.<br>
+            <strong>Diagram:</strong><br>
+            <img src="pic_3.png" alt="diagram describing Possibility 5"></li>
             <li><strong>Possibility 6:</strong> We could design a singular google form that a participant goes through and completes
             specific task and makes remarks about each one in the form. This kind of administration would allow less
             observation based data but a more structured data guaranteed to be relevant to the specific task, as participants
@@ -57,6 +62,11 @@
             they are, but at the expense of a more holistic idea of the system as a whole. This would give us valuable information,
             and it is information we would likely need to come to a conclusion, but it may be better to reduce the scope of the tests
             in order to gather more inclusive data.</li>
+            <li><strong>Possibility 11:</strong> In this one we would administer a pre-survey to asses the participants, and directly 
+            use observations from our usability test, using only data from the assessment. This allows us less data to analyze,
+            allowing us to focus specifically on the direct observations we took.<br>
+            <strong>Diagram:</strong><br>
+            <img src="pic_1.png" alt="diagram describing Possibility 11"></li>
         </ul>
 
         <h3>Prototypes</h3>
