--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body> 
         <h1>Deliverables</h1> 
         <ul>
-            <li><a href="Project Proposal.pdf">Proposal</a></li>
+            <li><a href="./d1.html">Deliverable #1</a></li>
             <li><a href="./d2.html">Deliverable #2</a></li>
         </ul>
 
