--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./d1.html">Deliverable #1</a></li>
             <li><a href="./d2.html">Deliverable #2</a></li>
+            <li><a href="./d3.html">Deliverable #3</a></li>
         </ul>
 
         <h2>Group Members</h2>
