--- a/d3.html
+++ b/d3.html
@@ -27,7 +27,106 @@
         </ul>
 
         <h3>Usability Goals</h3>
+        What usability goals will be tested?
+        <ul>
+            <li>How difficult or easy it is for users to access a certain form: we are measuring it by how many clicks (from the main page) 
+                required for the participants to find the forms, and how long does it take for them to access the form. 
+                We also want to keep track on how much time and number of pages visited until the participants ask for hints 
+            </li>
+            <li>Here are the specific forms:
+                <ul>
+                    <li><a href="https://grad-apply.willamette.edu/register/request-info">Atkinson Graduate School of Management Inquiry Form</a>   </li>
+                    <li><a href="https://grad-apply.willamette.edu/register/?id=9986ef44-4302-4357-9a57-4b7069f27bff">MBA Request Information (all programs included)</a>   </li>
+                    <li><a href="ttps://grad-apply.willamette.edu/register/mba-rfi">Request Information about Willamette's MBA</a>   </li>
+                    <li><a href="ttps://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa">https://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa</a>   </li>
+                    <li><a href="ttps://grad-apply.willamette.edu/register/mba-msds">MBA/MSDS Request Information</a>   </li>
+                    <li><a href="ttps://grad-apply.willamette.edu/register/one-year-mba-info">REQUEST INFORMATION - One Year MBA Program</a>   </li>
+                </ul>
+           </li>
+            <li>How well does the informations provided on the website (links, buttons, title of pages) in leading participants to access certain forms
+                <ul>
+                    <li>We want to know how much information participants are getting by just looking at the website pages, and whether they help them navigate through the website
+                    </li>
+                    <li>The post-survey will let participants answer some questions regarding this
+                    </li>
+                </ul>
+           <li>What navigation barriers or challenges do users face on the current site?</li>
+               <ul>
+                   <li>Is the website accessible for people to use in general?&nbsp;</li>
+                   <li>Does the website provide information that is needed by users?&nbsp;</li>
+                   <li>Is the website's structures organized in a way that is helpful for users?&nbsp;</li>
+                   <li>We will be analyzing the user&rsquo;s actions and thoughts (when they are thinking out loud), and from their post-survey answers</li>
+               </ul>
+           <li>Is there a website's design component that could impact the user's experience in navigating the website?&nbsp;               
+               <ul>
+                   <li>Are the font&rsquo;s in the website helpful for users?&nbsp;</li>
+                   <li>Is there any design component in the website that is harmful for users that prevent users from exploring the website?&nbsp;</li>
+                   <li>The post-survey will let participants answer some questions regarding this</li>
+               </ul> 
+           </li>
+
+        </ul>
         <h3>Usability Test Procedure</h3>
+        <ul>
+            <li>Overview of Usability Test Procedure:
+                <ul>
+                    <li>The usability test will be done online via Zoom, with the participant&rsquo;s screen being shared. This allow us to record the interaction for data analysis</li>
+                    <li>Participants will be asked if they would be fine with being recorded. Participants will have the choice to turn off the camera if they are more comfortable with that.The recording will not be distributed to anyone other than the examiner (Chris and Jimmy) and Professor. Agbo (if he wishes to have them for grading).&nbsp;</li>
+                    <li>In each usability test, the participants will be given about 5 tasks to complete. The user test can last about 30 - 60 minutes</li>
+                    <li>Participants can:&nbsp;            
+                        <ul>
+                            <li>Ask for hints to the examiner if they feel lost in any tasks</li>
+                            <li>Get a break if they wish to have one</li>
+                            <li>It is participant&rsquo;s rights to stop or not continue the usability test if they wish so</li>
+                        </ul>
+                    </li>
+                    <li>Once the usability tasks have been completed, the examiner will administer the post survey to the participants</li>
+                </ul>
+            </li>
+            <li>Equipment needed:&nbsp;
+                <ul>
+                    <li>Participants:
+                        <ul>
+                            <li>Each participant needs a working laptop/computer with an internet connection to access the website</li>
+                            <li>Each participant&rsquo;s laptop need to have a working microphone and speaker in order to communicate with examiner on Zoom&nbsp;</li>
+                            <li>Each participant should have Zoom installed on their device to do the usability test online.&nbsp;</li>
+                        </ul>
+                    </li>
+                    <li>Examiner
+                        <ul>
+                            <li>Examiner needs to have a working laptop/computer with an internet connection to open the Zoom meeting</li>
+                            <li>Examiner has to have a working microphone and speaker in order to communicate with participants on Zoom</li>
+                            <li>Examiner&rsquo;s device need to be equipped to record a Zoom recording of the usability test, this will make it easier to come back and watch the recording during data analysis</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>How should your prototype be handled?            
+                <ul>
+                    <li>Since the prototype is already a live website from Willamette, participant should be able to access it by click the 
+                        link: <a href="https://willamette.edu/mba/">Willamette MBA website</a></li>
+                    <li>If any questions or problem occurs during the user test, participants should notify the examiner.&nbsp;</li>
+                </ul>
+            </li>
+
+            <li>Examiners:
+                <ul>
+                    <li>At least 1 examiner in every usability test required</li>
+                    <li>Examiners&rsquo; duty: All to examiner&rsquo;s best practice and interview protocol are in the <a href="https://docs.google.com/document/d/12L-htZk8rmgoJaDSWsBQQboWldF4OcUjYZXv6dnrCOE/edit" target="_blank" rel="noopener">Examiner Guide to Usability Test</a></li>
+                    <li>What to measure:&nbsp;
+                        <ul>
+                            <li>Time that participants take on finishing each tasks given to them&nbsp;</li>
+                            <li>How many clicks or how many pages that participants need to visit in order to get to the form that they are looking for</li>
+                        <ul>
+                            <li>This will be compared by the smallest amount of pages visited (the shortest path) to access to certain form</li>
+                        </ul>
+                            <li>Examiner should takes notes on what issues that participants came across while attempting to complete the tasks</li>
+                            <li>Examiner should record barriers and struggles participants encounter</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
         <h3>Usability Evaluation</h3>
     </body>
 </html>
