--- a/d3.html
+++ b/d3.html
@@ -128,5 +128,35 @@
             </li>
         </ul>
         <h3>Usability Evaluation</h3>
+        <p>A detailed usability evaluation plan should enable independent evaluators to assess the design with respect to the stated goals for the project.</p>
+        <p>Our evaluation plan includes:</p>
+        <ul>
+            <li>
+                Measuring the users clicks to access certain forms will allow us to evalutate a kind of "natrual mapping" that the MBA website has -
+                effectively measuring how natrual it is to navigate compared to a real world environment.
+            </li>
+            <li>
+                We can measure use control/freedom through recognizing the ability for the user to come to a "home base" webpage they're comfortable with,
+                or by measuring how the user was able to backtrack through the pages when they recognize they might not be going the right direction.
+            </li>
+            <li>
+                We can measure consistency through the users through their verbalized thought process. If 2 links look similar, and one got them closer, they
+                will most likely click the next, and if performing this action takes them further we know that the internal consistency isn't what it should be.
+            </li>
+            <li>
+                Recognition can be measured by evaluating whether the expected outcome of navigating through a link matches the actual outcome. For example,
+                if there is a link that has the exact same name as the form they are navigating to, then it would make sense to click on it,
+                but if it instead takes them to a page that has a lot of other stuff and the link to the form is hidden on the page somewhere, this 
+                is something they'd have to remember, and which devalues their recognition of where they wish to navigate to.
+            </li>
+            <li>
+                Other miscellaneous things can indicate the design quality:
+                <ul>
+                    <li>Time it takes to navigate to a particular page</li>
+                    <li>User feedback on what parts they struggled with</li>
+                    <li>Post-survey data is another very valuable resource which should contain specific things that they struggled with</li>
+                </ul>
+            </li>
+        </ul>
     </body>
 </html>
