made font smaller to be more readable and added link to Examiner's Guide to d3

--- a/d3.html
+++ b/d3.html
@@ -37,10 +37,10 @@
                 <ul>
                     <li><a href="https://grad-apply.willamette.edu/register/request-info">Atkinson Graduate School of Management Inquiry Form</a>   </li>
                     <li><a href="https://grad-apply.willamette.edu/register/?id=9986ef44-4302-4357-9a57-4b7069f27bff">MBA Request Information (all programs included)</a>   </li>
-                    <li><a href="ttps://grad-apply.willamette.edu/register/mba-rfi">Request Information about Willamette's MBA</a>   </li>
-                    <li><a href="ttps://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa">https://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa</a>   </li>
-                    <li><a href="ttps://grad-apply.willamette.edu/register/mba-msds">MBA/MSDS Request Information</a>   </li>
-                    <li><a href="ttps://grad-apply.willamette.edu/register/one-year-mba-info">REQUEST INFORMATION - One Year MBA Program</a>   </li>
+                    <li><a href="https://grad-apply.willamette.edu/register/mba-rfi">Request Information about Willamette's MBA</a>   </li>
+                    <li><a href="https://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa">https://grad-apply.willamette.edu/register/?id=30a3da07-546e-4dc7-a40e-02fd863e5efa</a>   </li>
+                    <li><a href="https://grad-apply.willamette.edu/register/mba-msds">MBA/MSDS Request Information</a>   </li>
+                    <li><a href="https://grad-apply.willamette.edu/register/one-year-mba-info">REQUEST INFORMATION - One Year MBA Program</a>   </li>
                 </ul>
            </li>
             <li>How well does the informations provided on the website (links, buttons, title of pages) in leading participants to access certain forms
@@ -92,7 +92,7 @@
                             <li>Each participant should have Zoom installed on their device to do the usability test online.&nbsp;</li>
                         </ul>
                     </li>
-                    <li>Examiner
+                    <li>Examiner:
                         <ul>
                             <li>Examiner needs to have a working laptop/computer with an internet connection to open the Zoom meeting</li>
                             <li>Examiner has to have a working microphone and speaker in order to communicate with participants on Zoom</li>
@@ -125,6 +125,7 @@
                         </ul>
                     </li>
                 </ul>
+                <p>The full examiner's guide procedures can be found here: <strong><a href="https://docs.google.com/document/d/12L-htZk8rmgoJaDSWsBQQboWldF4OcUjYZXv6dnrCOE/edit?usp=sharing">Examiner's Guide</a></strong></p>
             </li>
         </ul>
         <h3>Usability Evaluation</h3>
