added part C to D3

--- a/d3.html
+++ b/d3.html
@@ -159,5 +159,46 @@
                 </ul>
             </li>
         </ul>
+        <h2>Part C</h2>
+        <h3>Results and Analysis</h3>
+        <h6>Initial Impressions:</h6>
+        <ul>
+            <li>Our tasks were finished much faster than expected. We observed some struggle and confusion, but overall most tasks were finished in 30-60 seconds.</li>
+            <li>We did complete all tasks with the users.</li>
+        </ul>
+        <h6>Specific Observations</h6>
+        <ul>
+            <li>Task 1:
+                <p>The first task, which was to find a specific request info page, was easy for most participants. It was displayed very
+                prominently. There was, however, some confusion over the "Request Info" button being about getting more information about the program or 
+                about giving the program your information.</p>
+            </li>
+            <li>Task 2:
+                <p>This task was completed unilaterally in very litte time by all participants, and in the post survey the only feedback is about contrast
+                with clickable buttons and menus appearing when hovering over buttons that will display a menu when clicked.</p>
+            </li>
+            <li>Task 3:
+                <p>During this task 2 of the participants struggled by missing the "Required Courses" button. It was displayed very prominently, and everyone found it eventually.
+                Other feedback is about navigating to the program page. This was a struggle for some participants, as they searched directly for a courses button and assumed
+                a cirriculum link would take them further from the main program page in which they were looking for the courses.</p>
+                <p>In this case, it was specifically the "GO" label that confused this participant into thinking this behavois would occur.</p>
+            </li>
+            <li>Other Observations:
+                <p>The search function was used occasionally, but it never produced the desired page.</p>
+            </li>
+        </ul>
+        <h6>Evaluation Plan Critique:</h6>
+        <p>One participant was confused by vague wording in the task. This could easily by improved by the administrator practicing and by making sure there is 
+        less ambiguity in the task presentation.</p>
+        <h6>Design Critique</h6>
+        <p>Overall, the design functioned well as navigation was not difficult for the participants. However, we did recieve consistent feedpack in:</p>
+        <ul>
+            <li>Labeling: Occasionally, some labeling was confusing, such as the "GO" button on the program page misdirecting users into believing the link
+            would take them further from the desired area.</li>
+            <li>Contrast: This was brought up in the pre-survey as important as well, and some users found this to be lacking in some part of the website.
+            However, when used correctly (such as with the "Required Courses" button), it assisted the users to complete the task almost immediately.</li>
+            <li>Search Function: The search function, when used, never yielded useful results. This made some users waste time during the evaluation, and ended up being 
+            a liability to successful navigation.</li>
+        </ul>
     </body>
 </html>
