--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="./d1.html">Deliverable #1</a></li>
             <li><a href="./d2.html">Deliverable #2</a></li>
             <li><a href="./d3.html">Deliverable #3</a></li>
+            <li><a href="./d5.html">Deliverable #5</a></li>
         </ul>
 
         <h2>Group Members</h2>
@@ -17,7 +18,5 @@
             <li>Jimmy Ostler</li>
             <li>Chris Olivia</li>
         </ul>
-
-        <h2>Project</h2>
     </body> 
 </html>
